removed height from button display window, fixed safari bug. still needs styling. also found error where siren doesn't play on mobile

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ body {
     font-size: 1.5rem;
     padding: 10px 15px;
     width: 60%;
-    height: 50%;
     align-content: center;
     background: black;
     color: #66FF66;
